# deep-xpia

./: .gitignore  Dockerfile.agents  Dockerfile.dashboard  README.md  deep-xpia-site.jsx  deep-xpia-workflow.yaml  deepxpiabench-v1.jsonl  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  vite.config.js  vite.config.js.timestamp-1781569620161-0f21ca92ae8af.mjs  vite.config.js.timestamp-1781570807103-881115c55d45d.mjs
dashboard/src/: DeepXPIA.jsx  main.jsx
docs/: index.html
docs/assets/: index-BXrj0YH9.js  index-BmG5pDjZ.js  index-BtzeQMpC.js  index-D-CeTbD7.js  index-DzHHaUEI.js
results/: coverage_matrix.md  deepxpiabench-v1-results.md  depth_analysis.md
scenarios/intent_laundering/: README.md  attack_payloads.py  ground_truth.py  pipeline.py
scenarios/memory_poisoning/: README.md  attack_payloads.py  ground_truth.py  pipeline.py
scenarios/registry_injection/: README.md  attack_payloads.py  ground_truth.py  pipeline.py
scenarios/session_smuggling/: README.md  __init__.py  attack_payloads.py  ground_truth.py  pipeline.py
src/deep_xpia/: __init__.py  cli.py  events.py  server.py
src/deep_xpia/adapters/: base.py  native.py
src/deep_xpia/bench/: generator.py  injection_library.py  (+5 more)
taxonomy/: TAXONOMY.md  aciarena_mapping.yaml  owasp_mapping.yaml  taxonomy.yaml
tests/: test_cas.py  test_context_budget.py  test_delegation_token.py  test_dlp.py  test_dxpia008.py  test_intent_verify.py  test_intent_verify_metadata.py  test_retrieve.py  test_schema_compat.py  test_taint.py
wiki/: Home.md  Metrics.md  Results.md
(+7 files in other folders)
