[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-xpia"
version = "2.0.0"
description = "Multi-hop cross-prompt injection benchmark for multi-agent AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Freya Zou" }]
keywords = ["security", "prompt-injection", "multi-agent", "benchmark", "xpia"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    "rich>=13.0",
    "typer>=0.12.0",
    "jsonlines>=4.0",
    "numpy>=1.26",
    "scipy>=1.13",
]

[project.optional-dependencies]
adapters = [
    "langgraph>=0.1.0",
    "crewai>=0.30.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
deepxpia = "deep_xpia.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/deep_xpia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
